[package]
name = "freertos_rust"
version = "0.1.0"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
#links = "winmm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
#target = "x86_64-pc-windows-msvc"
#target = "x86_64-pc-windows-gnu"
#rustflags = ["-lwinmm"]
[lib]
name = "freertos_rust"
path = "src/lib.rs"
#crate-type = ["cdylib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "freertos_demo_win"
path = "src/demo/win/main.rs"

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0"