[package]
name = "freertos_rust"
version = "0.1.0"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = "Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres."
keywords = ["FreeRTOS", "embedded", "demo", "library"]
links = "winmm" # Actually just for the Windows demo
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "freertos_rust"
path = "src/lib.rs"
#crate-type = ["cdylib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib

# [target.x86_64-pc-windows-gnu.dependencies]
[dependencies]
cty = "0.2.1"

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32l1xx-hal = {version = "0.1.0", features = ["stm32l151"], default-features = false}

#embedded-hal = "0.2.3"
#nb = "0.1.2"

#panic-semihosting = { version = "0.5.3", features = ["exit"] }
alloc-cortex-m = { git = "https://github.com/rust-embedded/alloc-cortex-m", branch = "master" }
#alloc-cortex-m = "0.3.5"
#linked_list_allocator = "0.8.2"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0"

[dev-dependencies]
test-case = "0.3.1"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations