[package]
name = "freertos-cargo-build"
description = """
Utility lib for building & using FreeRTOS in rust projects inside the build.rs.
"""
version = "0.1.0"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lobaro/FreeRTOS-rust"

[lib]

[dependencies]
cc = "1.0.52"
walkdir = "2.3.1"



