[package]
name = "freertos-rust-examples"
version = "0.1.0"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = "Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres."
keywords = ["FreeRTOS", "embedded", "demo", "examples"]

[dependencies]
freertos-rust = {path = "../freertos-rust"}

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.6.0"
cortex-m-rt = {version = "0.6.12"}
nrf9160-pac = "0.2.1"

# Example: stm32-cortex-m3
[target.thumbv7m-none-eabi.dependencies]
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32l1xx-hal = {version = "0.1.0", features = ["stm32l151"], default-features = false}

# Example: nrf9160
[target.thumbv8m.main-none-eabihf.dependencies]
nrf9160-pac = "0.2.1"

# Example: win
[target.x86_64-pc-windows-gnu.dependencies]

[build-dependencies]
freertos-cargo-build = {path = "../freertos-cargo-build"}