[package]
name = "freertos-rust-examples"
version = "0.1.1"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = """
Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres.
"""
keywords = ["FreeRTOS", "embedded", "demo", "examples"]
repository = "https://github.com/lobaro/FreeRTOS-rust"

[dependencies]
freertos-rust = {path = "../freertos-rust"}

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"

# Example: stm32-cortex-m3
[target.thumbv7m-none-eabi.dependencies]
panic-halt = "0.2.0"
stm32l1xx-hal = {version = "0.1.0", features = ["stm32l151"], default-features = false}

# Example: stm32-cortex-m4-blackpill
[target.thumbv7em-none-eabihf.dependencies]
embedded-hal = "1.0"
stm32f4xx-hal = {version = "0.22", features = ["stm32f411"]}

# Example: nrf9160
[target."thumbv8m.main-none-eabihf".dependencies]
nrf9160-pac = "0.2.1"

# Example: win
[target.x86_64-pc-windows-gnu.dependencies]

# Example: linux
[target.x86_64-unknown-linux-gnu.dependencies]

[build-dependencies]
freertos-cargo-build = {path = "../freertos-cargo-build"}
