[package]
name = "freertos-rust-examples"
version = "0.1.1"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = """
Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres.
"""
keywords = ["FreeRTOS", "embedded", "demo", "examples"]
repository = "https://github.com/lobaro/FreeRTOS-rust"

[dependencies]
freertos-rust = {path = "../freertos-rust"}

# Example: stm32-cortex-m3
[target.thumbv7m-none-eabi.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32f1xx-hal = {version = "0.10", features = ["rt", "stm32f103", "medium"]}

# Example: stm32-cortex-m4-blackpill
[target.thumbv7em-none-eabihf.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
stm32f4xx-hal = {version = "0.22", features = ["stm32f411"]}

# Example: nrf9160
[target."thumbv8m.main-none-eabihf".dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
nrf9160-pac = {version = "0.12", features = ["rt"]}

# Example: win
[target.x86_64-pc-windows-gnu.dependencies]

# Example: linux
[target.x86_64-unknown-linux-gnu.dependencies]

[build-dependencies]
freertos-cargo-build = {path = "../freertos-cargo-build"}
