[package]
name = "freertos-rust"
version = "0.1.0"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = "Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres."
keywords = ["FreeRTOS", "embedded", "demo", "library"]
links = "freertos"

[lib]
name = "freertos_rust"
path = "src/lib.rs"