[package]
name = "freertos-rust"
version = "0.1.2"
authors = ["Tobias Kaupat <tk@lobaro.de>"]
edition = "2018"
description = """
Create to use FreeRTOS in rust projects.
The freertos-cargo-build crate can be used to build and link FreeRTOS from source inside build.rs.
"""
keywords = ["FreeRTOS", "embedded", "demo", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lobaro/FreeRTOS-rust"
links = "freertos"

[lib]
name = "freertos_rust"
path = "src/lib.rs"

[features]
default = ["allocator", "sync", "time", "hooks", "interrupt"]
allocator = []
sync = ["interrupt"]
time = ["interrupt"]
hooks = []
interrupt = []
cpu_clock = []